--- a/QuasiText.cabal
+++ b/QuasiText.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                QuasiText
-version:             0.1.1.0
+version:             0.1.1.5
 synopsis:            Text interpolation for well, Text
 -- description:         
 homepage:            http://quasimal.com
@@ -18,5 +18,5 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Text.QuasiText
   -- other-modules:       
-  build-depends:       base ==4.5.*, template-haskell ==2.7.*, attoparsec ==0.10.*, text ==0.11.*
+  build-depends:       base ==4.5.*, template-haskell ==2.7.*, haskell-src-meta == 0.5.*, attoparsec ==0.10.*, text ==0.11.*
   hs-source-dirs:      src
