--- a/QuasiText.cabal
+++ b/QuasiText.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                QuasiText
-version:             0.1.2.2
+version:             0.1.2.3
 synopsis:            A QuasiQuoter for Text.
 description:         A QuasiQuoter for interpolating values into Text strings.
 homepage:            https://github.com/mikeplus64/QuasiText
@@ -17,5 +17,5 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Text.QuasiText
   -- other-modules:       
-  build-depends:       base, template-haskell, haskell-src-meta, attoparsec, text
+  build-depends:       base >= 4.5.0.0 && < 5.0.0.0, template-haskell, haskell-src-meta, attoparsec, text
   hs-source-dirs:      src
